# Lamdasonden-Messtation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GPIO.py  LambdaSensor.py  MAMA.spec  MCP3008.py  README.md  TODO.md  TestADC.py  database.py  globale_variablen.py  gunicorn.conf.py  influxdb.ini  lambda_sensor.py  lamda.service  pyproject.toml  raspi_status.py  readme.md  requirements.txt  settings.json  settings_example.json  starter.py  typ_k_tempreatursensor.py
.devcontainer/: devcontainer.json  devcontainer.json.bak
.github/: copilot-instructions.md
deployment/: create-update-tar.sh  docker-entry.sh  gunicorn.conf.py  install.sh  lamda.service  mama.service  setup.sh
docs/: README.md  TODO.md
mama/: MCP3008.py  __init__.py  __main__.py  app.py  config.py  globale_variablen.py  lamda.py  starter.py
mama/models/: __init__.py  database.py
mama/routes/: __init__.py  api.py  main.py  settings.py  system.py  update.py
mama/sensors/: gpio.py  lamda_sensor.py  mcp3008.py  temp_sensor.py
mama/static/css/: history.css  lambda.css  main.css  system.css  update.css
mama/static/javascript/: mySockets.js
mama/static/javascript/chart/: chart.umd.js.map
mama/tasks/: __init__.py  background.py
mama/templates/: baenke.jinja  base.jinja  calibration_modal.jinja  config_modal.jinja  error_modal.jinja  history.jinja  index.jinja  info_modal.jinja  system.jinja  temperaturen.jinja  test.html  update.jinja
mama/utils/: diagnostics.py  raspi_status.py  update.py
scripts/: generate_history_data.py
src/mama/: __init__.py  app.py  config.py
src/mama/models/: database.py
src/mama/routes/: __init__.py  api.py  main.py  settings.py  system.py
src/mama/sensors/: __init__.py  gpio.py  lambda_sensor.py  mcp3008.py  temp_sensor.py
src/mama/tasks/: background.py
src/mama/utils/: raspi_status.py
static/css/: history.css  main.css  my.css
static/javascript/: mySockets.js
system/etc/: dhcpcd.conf  dnsmasq.conf
system/etc/hostapd/: hostapd.conf
system/etc/systemd/system/: mama.service
templates/: baenke.jinja  base.jinja  config_modal.jinja  error_modal.jinja  history.jinja  history_modal.jinja  index.html  index.jinja  info_modal.jinja  system.html  system.jinja  temperaturen.jinja  test.html
tests/: generate_history_data.py
