[tool.poetry]
name = "mama"
version = "1.0.1"
description = ""
authors = ["Florian Glaser <58706771+Floskinner@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
Flask-SocketIO = "^5.1.2"
Jinja2 = "^3.1.2"
psutil = "^5.9.0"
requests = "^2.27.1"
spidev = "^3.5"
eventlet = "0.30.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
