[tool.poetry]
name = "mama"
version = "2.0.0"
description = "Lambda Sensor Measurement Station"
authors = ["Florian Glaser <58706771+Floskinner@users.noreply.github.com>"]
packages = [{include = "mama"}]

[tool.poetry.scripts]
mama = "mama.app:main"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
gunicorn = "^23.0.0"
Flask-SocketIO = "^5.4.1"
Jinja2 = "^3.1.4"
psutil = "^6.1.0"
requests = "^2.32.3"
spidev = "^3.6"
eventlet = "^0.37.0"
python-socketio = "^5.11.4"
python-engineio = "^4.9.1"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
commitizen = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"
